force-app/main/default/objects/Change_Order__c/Change_Order__c.object-meta.xml
<CustomObject>
    <description>Records a scope or cost change to an approved Work Order or Quote. Requires approval when revenue or cost impact exceeds the configured threshold.</description>
    <label>Change Order</label>
    <nameField>
        <displayFormat>CO-{0000000}</displayFormat>
        <label>Change Order Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Change Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>