force-app/main/default/objects/Change_Order__c/fields/Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Approved_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approved By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Change Orders (Approved By)</relationshipLabel>
    <relationshipName>Approved_Change_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>