force-app/main/default/objects/Change_Order__c/fields/Cost_Impact__c.field-meta.xml
<CustomField>
    <fullName>Cost_Impact__c</fullName>
    <label>Cost Impact</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>