force-app/main/default/objects/Change_Order__c/fields/Downstream_Impact__c.field-meta.xml
<CustomField>
    <fullName>Downstream_Impact__c</fullName>
    <description>Required at approval. Documents how this change affects schedule, inventory, billing, crew, or other downstream systems. Must be explicitly noted before approval is recorded.</description>
    <label>Downstream Impact</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>