force-app/main/default/objects/Change_Order__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Builder Change</fullName>
            </value>
            <value>
                <fullName>Scope Change</fullName>
            </value>
            <value>
                <fullName>Quantity Variance</fullName>
            </value>
            <value>
                <fullName>Site Condition</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>