force-app/main/default/objects/Change_Order__c/fields/Requested_By__c.field-meta.xml
<CustomField>
    <fullName>Requested_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who submitted this change order. Set automatically on submit.</description>
    <label>Requested By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Change Orders (Requested By)</relationshipLabel>
    <relationshipName>Change_Orders_Requested_By</relationshipName>
    <type>Lookup</type>
</CustomField>