force-app/main/default/objects/Change_Order__c/fields/Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Date__c</fullName>
    <description>Timestamp when this change order was submitted. Set automatically on submit.</description>
    <label>Requested Date</label>
    <type>DateTime</type>
</CustomField>